# CMakeCodeGen

./: .gitignore  CMakeLists.txt  GenClass.py  GenModule.py  README.md
source/: CMakeLists.txt  CMakeNewClassWatcher.txt  main.cpp
source/api/: IDummy.h
source/ioc_system/: IoCRegistration.h  IoCRegistrations.cpp  IoCRegistrations.h  IoCStack.cpp  IoCStack.h
source/module_system/: IModule.h  ModuleDescription.h  ModuleManager.cpp  ModuleManager.h  RegisterAllModules.cpp
source/modules/: CMakeLists.txt
source/modules/implementations/: Bar.cpp  Bar.h  Foo.cpp  Foo.h
source/modules/module_config/: Bar.module  Foo.module
source/support/: Singleton.h
templates/: class.cpp.template  class.h.template  modules.cpp.template  modules.h.template  register_all_modules.cpp.template
