cmake_minimum_required(VERSION 3.20.0 FATAL_ERROR)

set(CMAKE_CODE_GEN_LIBRARY_NAME Modules)

set(CMAKE_CODE_GEN_MODULES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/module_config)
file(GLOB CMAKE_CODE_GEN_MODULES CONFIGURE_DEPENDS module_config/*.module)
message("[${CMAKE_CODE_GEN_NAME}.${CMAKE_CODE_GEN_LIBRARY_NAME}] CMAKE_CODE_GEN_MODULES: ${CMAKE_CODE_GEN_MODULES}")

set_property(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    PROPERTY CMAKE_CONFIGURE_DEPENDS
    ${CMAKE_CODE_GEN_MODULES}
)

set(PYTHON_FILE GenModule.py)
set(PYTHON_ARGS ${PYTHON_FILE} -s ${CMAKE_CURRENT_SOURCE_DIR} -m ${CMAKE_CODE_GEN_MODULES_DIR})
execute_process(
    COMMAND ${Python_EXECUTABLE} ${PYTHON_ARGS}
    WORKING_DIRECTORY ${CMAKE_CODE_GEN_PROJECT_DIR}
    OUTPUT_VARIABLE PYTHON_OUTPUT
    RESULT_VARIABLE PYTHON_RESULT
    ERROR_VARIABLE PYTHON_ERROR
)
message("[${CMAKE_CODE_GEN_NAME}.${CMAKE_CODE_GEN_LIBRARY_NAME}] PYTHON_OUTPUT: ${PYTHON_OUTPUT}")

if (NOT ${PYTHON_RESULT} EQUAL 0)
    message(FATAL_ERROR "[${CMAKE_CODE_GEN_NAME}.${CMAKE_CODE_GEN_LIBRARY_NAME}] ${PYTHON_FILE} returns ${PYTHON_RESULT}: ${PYTHON_ERROR}." )
endif()

file(GLOB_RECURSE SOURCE_FILES *.cpp* *.h* *.hpp*)
# message("[${CMAKE_CODE_GEN_NAME}.${CMAKE_CODE_GEN_LIBRARY_NAME}] SOURCE_FILES: ${SOURCE_FILES}")

message("\n[${CMAKE_CODE_GEN_NAME}.${CMAKE_CODE_GEN_LIBRARY_NAME}] Begin building Visual Studio filters: ")
foreach(SOURCE_FILE IN ITEMS ${SOURCE_FILES})
    get_filename_component(SOURCE_FILE_PATH "${SOURCE_FILE}" PATH)
    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" GROUP_PATH "${SOURCE_FILE_PATH}")
    string(REPLACE "/" "\\" GROUP_PATH "${GROUP_PATH}")
    message(${SOURCE_FILE})
    source_group("${GROUP_PATH}" FILES "${SOURCE_FILE}")
endforeach()
message("[${CMAKE_CODE_GEN_NAME}.${CMAKE_CODE_GEN_LIBRARY_NAME}] End building Visual Studio filters.\n")

add_library(${CMAKE_CODE_GEN_LIBRARY_NAME} SHARED ${SOURCE_FILES})
target_include_directories(${CMAKE_CODE_GEN_LIBRARY_NAME} PRIVATE ${CMAKE_CODE_GEN_INCLUDE_DIR})
target_link_directories(${CMAKE_CODE_GEN_LIBRARY_NAME} PRIVATE ${CMAKE_CODE_GEN_LIBRARY_DIR})

target_link_libraries(${CMAKE_CODE_GEN_NAME} PUBLIC ${CMAKE_CODE_GEN_LIBRARY_NAME})
